--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="../images/Media.png" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CampuStore</title>
     <link rel="stylesheet" href="./css/style.css" />
