--- a/pages/gradeProdutos.html
+++ b/pages/gradeProdutos.html
@@ -24,8 +24,8 @@
       </div>
 
       <div id="navContent">
-        <a href="./gradeProdutos.html">PAGINA INICIAL</a>
-        <a href="./produto.html">Tabela Produtos</a>
+        <a href="./produto.html">PAGINA INICIAL</a>
+        <a href="./gradeProdutos.html">PRODUTOS</a>
         <a href="./promocoes.html">PROMOÇÃO</a>
         <a href="./mapa.html">ENDEREÇO</a>
         <a href="./sobre.html">SOBRE</a>
@@ -135,7 +135,7 @@
 
       if (carrinho.length >= 7) {
         alert("Carrinho Cheio!!!");
-        return; 
+        return;
       }
 
       carrinho.push({ nome, preco });
