--- a/pages/produto.html
+++ b/pages/produto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="../images/Media.png" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tabelas Produtos - CampusStore</title>
+    <title>TabelasProdutos</title>
     <link rel="stylesheet" href="../css/produto.css" />
     <link rel="stylesheet" href="../css/headertest.css" />
   </head>
@@ -29,12 +29,12 @@
         </div>
 
         <div id="navContent">
-          <a href="./gradeProdutos.html">PAGINA INICIAL</a>
-          <a href="./produto.html">Tabela Produtos</a>
+          <a href="./produto.html">PAGINA INICIAL</a>
+          <a href="./gradeProdutos.html">PRODUTOS</a>
           <a href="./promocoes.html">PROMOÇÃO</a>
           <a href="./mapa.html">ENDEREÇO</a>
           <a href="./sobre.html">SOBRE</a>
-        </div>
+        </div>        
 
         <div id="figures">
           <figure>
