--- a/pages/gradeProdutos.html
+++ b/pages/gradeProdutos.html
@@ -122,7 +122,7 @@
     </div>
   </div>
 </body>
-<script src="../index.js"></script>
+<script src="../menuHamburguer.js"></script>
 <script>
   document.querySelectorAll(".produto").forEach((produto) => {
     produto.addEventListener("click", function () {
