--- a/pages/produto.html
+++ b/pages/produto.html
@@ -124,5 +124,5 @@
     </div>
   </body>
   <script src="../js/tabelaFuncao.js"></script>
-  <script src="../index.js"></script>
+  <script src="../menuHamburguer.js"></script>
 </html>
