--- a/pages/promocoes.html
+++ b/pages/promocoes.html
@@ -70,7 +70,7 @@
       </div>
     </section>
   </main>
-  <script src="../index.js"></script>
+  <script src="../menuHamburguer.js"></script>
 </body>
 <script>
   function handleAdicionarCarrinho(buttonElement) {
